cronjob.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: my-python-project
