deployment.yaml

kind: Namespace
apiVersion: v1
metadata:
  name: new-nodejs-project
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-nodejs
  labels:
    app: new-nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-nodejs
  template:
    metadata:
      labels:
        app: new-nodejs
    spec:
      containers:
      - name: new-nodejs
        image: tftest/new-nodejs-project:latest
        ports:
        - containerPort: 3000
