load-balancer.yaml

kind: Namespace
apiVersion: v1
metadata:
  name: angular

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular
  labels:
    app: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: tftest/angular
        ports:
        - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: angular
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"

spec:
  selector:
    app: angular
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
  type: LoadBalancer
