pvc-mongo.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    role: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      role: mongo
  template:
    metadata:
      labels:
        role: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: mongo-vol
      volumes:
      - name: mongo-vol
        persistentVolumeClaim:
          claimName: mongo-claim0
---

apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
