service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-nodejs
spec:
  selector:
    app: new-nodejs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
