ingress.yaml

kind: Namespace
apiVersion: v1
metadata:
  name: apache-php
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-php
  labels:
    app: apache-php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-php
  template:
    metadata:
      labels:
        app: apache-php
    spec:
      containers:
      - name: apache-php
        image: tftest/apache-php
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache-php
spec:
  selector:
    app: apache-php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress-test-apache-php
  namespace: apache-php
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - hosts:
        - maya.test.com
  rules:
    - host: maya.test.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: apache-php
              servicePort: 80
